# coqui-stt

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
examples/: basic_usage.rs  threads.rs
src/: candidate_transcript.rs  deadpool_integration.rs  errors.rs  helpers.rs  lib.rs  metadata.rs  model.rs  stream.rs  threadsafe_stream.rs  token_metadata.rs
