[package]
name = "coqui-stt"
version = "0.2.0"
edition = "2021"
authors = ["0/0 <zero@imaskeleton.me>"]
description = "Safe wrapper around the Coqui STT C library"
license = "MPL-2.0"
documentation = "https://docs.rs/coqui-stt"
repository = "https://github.com/tazz4843/coqui-stt"
keywords = ["speech-to-text", "stt"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
coqui-stt-sys = "1.1.1"
flume = { version = "0.10", optional = true }

[dev-dependencies]
audrey = "0.3"
dasp_signal = "0.11"
dasp_interpolate = { version = "0.11", features = ["linear"] }

[features]
default = []
raw-bindings = []
threadsafe-streams = ["flume"]
async-streams = ["flume/async"]
