[package]
name = "coqui-stt"
version = "1.0.2"
edition = "2021"
authors = ["0/0 <zero@imaskeleton.me>"]
description = "Safe wrapper around the Coqui STT C library"
license = "MPL-2.0"
documentation = "https://docs.rs/coqui-stt"
repository = "https://github.com/tazz4843/coqui-stt"
keywords = ["speech-to-text", "stt"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coqui-stt-sys = "1.3.0"
deadpool = { version = "0.9", optional = true }
deadpool-sync = { version = "0.1", optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
audrey = "0.3"
dasp_signal = "0.11"
dasp_interpolate = { version = "0.11", features = ["linear"] }

[features]
default = []
raw-bindings = []
deadpool_integration = ["deadpool", "deadpool-sync", "async-trait"]
